mType/tests/testFiles/import/error/importMissingFrom.mt
// Test: Missing 'from' keyword
@Script
import { SomeClass }

var obj = SomeClass();
